objects/Promotion__c.object
<CustomObject>
    <description>Holds Promotions that Sales will want to use throughout the year.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The last date the promotion will be active.</description>
        <inlineHelpText>The last date the promotion will be active.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Included_Part_Descriptions__c</fullName>
        <description>Included Part Descriptions for the promotion.</description>
        <inlineHelpText>Included Part Descriptions for the promotion.</inlineHelpText>
        <label>Included Part Descriptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Included_Part_Numbers__c</fullName>
        <description>Included Part Numbers for the promotion.</description>
        <inlineHelpText>Included Part Numbers for the promotion.</inlineHelpText>
        <label>Included Part Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PromoPart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The promotion part that is added to the quote that will cause the other parts to be added</description>
        <label>Promo Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Discount_Amount__c</fullName>
        <description>If promotion has standard discount(in dollars), this discount is for live of contract.</description>
        <inlineHelpText>If promotion has standard discount(in dollars), this discount is for live of contract.</inlineHelpText>
        <label>Promo Discount Amount</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo_Discount_Length__c</fullName>
        <description>How many billing periods will the discounts be applied. (Amount or Percent)</description>
        <inlineHelpText>How many billing periods will the discounts be applied. (Amount or Percent)</inlineHelpText>
        <label>Promo Discount Length</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promo_Discount_Percent__c</fullName>
        <description>If promotion has standard discount (in percentage), this discount is for live of contract.</description>
        <inlineHelpText>If promotion has standard discount (in percentage), this discount is for live of contract.</inlineHelpText>
        <label>Promo Discount Percent</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Promo_End_Date__c</fullName>
        <description>Promotion End Date</description>
        <inlineHelpText>Promotion End Date</inlineHelpText>
        <label>Promo End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_Part_Number__c</fullName>
        <description>The part number that will trigger the addition of the other parts.</description>
        <inlineHelpText>The part number that will trigger the addition of the other parts.</inlineHelpText>
        <label>Promo Part Number</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Promo_Start_Billing_Date__c</fullName>
        <description>The date the Billing trigger is set to start the billing.</description>
        <inlineHelpText>The date the Billing trigger is set to start the billing.</inlineHelpText>
        <label>Promo Start Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_Start_Date__c</fullName>
        <description>Promotion Start Date</description>
        <inlineHelpText>Promotion Start Date</inlineHelpText>
        <label>Promo Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The first date the promotion will be available.</description>
        <inlineHelpText>The first date the promotion will be available.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Partner</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>partner</value>
        </filters>
        <label>Partner</label>
    </listViews>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date_after_Start_Date</fullName>
        <active>true</active>
        <description>The end date must be after the start date.</description>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorMessage>The end date must be after the start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promo_Part_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( PromoPart__c )  ||  ISBLANK(PromoPart__c )</errorConditionFormula>
        <errorMessage>The promo part is required</errorMessage>
    </validationRules>
</CustomObject>